fix: mobile image cropping

--- a/portfolio/static/portfolio/css/portfolio-style.css
+++ b/portfolio/static/portfolio/css/portfolio-style.css
@@ -165,3 +165,10 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .port img {
+    width: 100%;
+    height: auto;
+  }
+}
